[gd_scene load_steps=5 format=3 uid="uid://blbmvgivelnco"]

[ext_resource type="Texture2D" uid="uid://cvvs1pvjjvcr2" path="res://assets/sprites/ui/inventory_background.png" id="1_gjv8a"]
[ext_resource type="Script" path="res://scripts/stat_menu.gd" id="1_lp0h7"]
[ext_resource type="FontFile" uid="uid://bn0mym6vxgjoe" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_sgkqr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fxguu"]
bg_color = Color(0, 0.584314, 0.101961, 1)

[node name="StatMenu" type="Control"]
layout_mode = 3
anchor_top = 0.1
anchor_right = 0.3
anchor_bottom = 0.4
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lp0h7")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_gjv8a")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_sgkqr")
text = "Stats"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="FishingLvlLabel" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_sgkqr")
text = "Fishing 
Level"

[node name="FishingLvl" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_sgkqr")
text = "0"

[node name="FishingEXPLabel" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_sgkqr")
text = "Fishing 
EXP"

[node name="FishingEXP" type="ProgressBar" parent="NinePatchRect/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_sgkqr")
theme_override_styles/fill = SubResource("StyleBoxFlat_fxguu")

[node name="CombatLvlLabel" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_sgkqr")
text = "Combat
Level"

[node name="CombatLvl" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_sgkqr")
text = "0"

[node name="CombatEXPLabel" type="Label" parent="NinePatchRect/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_sgkqr")
text = "Combat
EXP"

[node name="CombatEXP" type="ProgressBar" parent="NinePatchRect/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_sgkqr")
theme_override_styles/fill = SubResource("StyleBoxFlat_fxguu")
